Removed some warning. Add some with try-with-ressource.